Fix issue with thumbnail images shifting

--- a/_sass/pages/blog.scss
+++ b/_sass/pages/blog.scss
@@ -54,6 +54,8 @@
 
         .post-thumbnail {
             position: absolute;
+            bottom: 0;
+            top: 0;
             left: 0;
             right: 0;
             
